add_executable(ArborX_Example_TriangleIntersection.exe triangle_intersection.cpp)
target_link_libraries(ArborX_Example_TriangleIntersection.exe ArborX::ArborX)
add_test(NAME ArborX_Example_TriangleIntersection COMMAND ArborX_Example_TriangleIntersection.exe)

add_executable(ArborX_Example_TriangleIntersectionWithMapping.exe triangle_intersection.cpp)
target_link_libraries(ArborX_Example_TriangleIntersectionWithMapping.exe ArborX::ArborX)
target_compile_definitions(ArborX_Example_TriangleIntersectionWithMapping.exe PRIVATE PRECOMPUTE_MAPPING)
add_test(NAME ArborX_Example_TriangleIntersectionWithMapping COMMAND ArborX_Example_TriangleIntersectionWithMapping.exe)
